--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -93,13 +93,13 @@ jobs:
             tag_prefix: cu124-lite
           - cuda_version: 12.4
             lite: false
-            tag_prefix: cu124
+            tag_prefix: cu124-full
           - cuda_version: 12.8
             lite: true
             tag_prefix: cu128-lite
           - cuda_version: 12.8
             lite: false
-            tag_prefix: cu128
+            tag_prefix: cu128-full
 
     steps:
       - name: Checkout Code
