--- a/.github/workflows/docker-tag-test.yaml
+++ b/.github/workflows/docker-tag-test.yaml
@@ -65,7 +65,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: true
+          push: false
           platforms: linux/amd64
           build-args: |
             LITE=${{ matrix.lite }}
